<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuidePageActivity">

    <com.youth.banner.Banner
        android:id="@+id/banner_guide_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:banner_auto_loop="false"
        app:banner_indicator_normal_color="@color/teal_200"
        app:banner_indicator_selected_color="#DD2C00"
        app:banner_infinite_loop="false" />

    <Button
        android:visibility="visible"
        android:id="@+id/btn_guide_page_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="40dp"
        android:text="@string/skip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <Button
            android:visibility="gone"
            android:id="@+id/btn_guide_page_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_home" />

        <Button
            android:visibility="gone"
            android:id="@+id/btn_guide_page_net_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_set" />

    </LinearLayout>

</FrameLayout>